Dcreator/src/objects/Doctors__c.object
<CustomObject>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location of doctor</description>
        <label>Hospital</label>
        <referenceTo>Hospitals__c</referenceTo>
        <relationshipLabel>Doctors</relationshipLabel>
        <relationshipName>Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxID__c</fullName>
        <label>TaxID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Doctor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Doctor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>